# ZFLOW

./: README.md
postprocess/: calculate_speed.m  energetics_calculator.m  postprocess.m  turning_calculator.m  velocity_calculator.m
preprocess/: preSimVis.m  rebuild_model.m
simulation/: .gitignore  CMakeLists.txt  IBZebraFishKinematics3d.cpp  IBZebraFishKinematics3d.h  Makefile  README.md  eel3d.vertex  example.cpp  input3d  sizes.txt  stacked.txt
